refactor: use subList for number selection and sort output representation